--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
         <script src="/javascripts/webpage.js" defer></script>
     </head>
-    <body>
+
+    <body onload="checkIfLoggedIn()"> <!-- Xiaoyu Thursday  -->
 
         <!-- Header -->
         <div id="outer-header">
