--- a/public/club.html
+++ b/public/club.html
@@ -14,7 +14,7 @@
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
         <script src="/javascripts/webpage.js" defer></script>
     </head>
-    <body>
+    <body onload="checkIfLoggedIn()">
 
         <!-- Header -->
         <div id="outer-header">
