manage user info done xx

--- a/public/user.html
+++ b/public/user.html
@@ -98,10 +98,10 @@
                               <input class = "signup_inputs" type="text" placeholder="Enter email" id="new_email">
                               <br>
                               <label for="password"><b>Password:</b></label>
-                              <input class = "signup_inputs" type="text" placeholder="Enter password" id="new_password">
+                              <input class = "signup_inputs" type="password" placeholder="Enter password" id="new_password">
                               <br>
                               <label for="repeat-password"><b>Repeat Password:</b></label>
-                              <input class = "signup_inputs" type="text" placeholder="Enter password again" id="new_password_repeated">
+                              <input class = "signup_inputs" type="password" placeholder="Enter password again" id="new_password_repeated">
                               <br>
                         </div>
                         <div class="divs-in-popup">
