fixed up index and log in page aethetics

--- a/public/index.html
+++ b/public/index.html
@@ -98,30 +98,10 @@
                 </div>
             </div>
         </div> -->
-
-        <!-- Login Form - Using/Following Bootstrap Template -->
-        <!-- Implement using vue.js a hide for this div dependent on whether the client has already logged unto the page -->
-        <div id="outer-form">
-            <div id="form" class="container">
-                <h5 id="login-heading">
-                    Quick Login
-                </h5>
-                <form>
-                    <div class="form-outline mb-4">
-                      <input type="email" id="form2Example1" class="form-control" placeholder="Email Address"/>
-                    </div>
-
-                    <div class="form-outline mb-4">
-                      <input type="password" id="form2Example2" class="form-control" placeholder="Password"/>
-                    </div>
-
-                    <div id="signin-div">
-                        <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
-                        <p>Not a member? <a href="#!">Register</a></p>
-                    </div>
-                  </form>
+            <div class="centered">
+                <h1>Join a Club, Join The Culture</h1>
+                <p>No matter what you're interested, what you like or who you are, theres a uni club for you.</p>
             </div>
-        </div>
 
         <!-- Footer -->
         <div id="footer" class="text-center">
