--- a/public/login.html
+++ b/public/login.html
@@ -5,14 +5,21 @@
             Home
         </title>
         <link rel="stylesheet" href="/stylesheets/styleforlogin.css">
+        <link rel="stylesheet" href="/stylesheets/users.css">
         <script src="https://accounts.google.com/gsi/client" async defer></script>
         <script src="javascripts/login.js"></script>
 
     </head>
 <body>
-  <h1>Log In</h1>
+  <div class="login_and_signup_container">
+    <h1>Log In & Sign up</h1>
+    <h3>Log in with your details, continue with google, or, if you're a new user, sign up by entering your details below.</h3>
+    <a href="index.html" class="home-link">TAKE ME BACK TO HOME</a>
+  </div>
         <div class="login_and_signup_container">
           <div class = "login_container">
+            <h2>Log In</h2>
+            <br>
             <label for="username"><b>Username</b></label>
             <br>
             <input class = "login_inputs" type="text" placeholder="Enter Username" id="username" required>
@@ -21,13 +28,8 @@
             <br>
             <input class = "login_inputs" type="password" placeholder="Enter Password" id="password" required>
             <br>
-            <button type="submit" onclick="logIn();">Login</button>
-            <label>
-              <br>
-              <input type="checkbox" checked="checked" name="remember"> Remember me
-            </label>
+            <button type="submit" class="submit-user-details-button" onclick="logIn();">Login</button>
             <br>
-            <span class="password">Forgot <a href="#">password?</a></span>
           </div>
           <!--<div id="g_id_onload"
             data-client_id="521244062266-prh5adjbtjmgk7vga4g1t8j515u0kt9l.apps.googleusercontent.com"
@@ -52,7 +54,6 @@
           data-login_uri="http://localhost:8080/google_login"
           data-auto_prompt="false">
       </div>
-
       <div class="g_id_signin"
           data-type="standard"
           data-shape="pill"
@@ -60,6 +61,9 @@
           data-text="continue_with"
           data-size="large"
           data-logo_alignment="left">
+      </div>
+      <div>
+        <h3> OR </h3>
       </div>
           <div class = "bottom_div">
             <h2>Sign up</h2>
@@ -76,14 +80,6 @@
               <br>
               <input class = "signup_inputs" type="number" placeholder="Enter phone number" id="phonenumber" required>
               <br>
-              <label for="user_type"><b>Type of user:</b></label>
-              <br>
-              <input type="radio" id="user" name="user_type" value="user">
-              <label for="user">User</label><br>
-              <input type="radio" id="club_manager" name="user_type" value="club_manager">
-              <label for="club_manager">Club manager</label><br>
-              <input type="radio" id="system_admin" name="user_type" value="system_admin">
-              <label for="system_admin">System Admin</label>
             </div>
             <div class = "signup_container">
               <label for="username"><b>Username</b></label>
@@ -102,8 +98,7 @@
               <br>
               <input class = "signup_inputs" type="password" placeholder="Enter Password" id="repeat-password" required>
               <br>
-              <button type="submit" onclick="signUp();">Signup</button>
-              <button type="submit" onclick="logOut();">Logout test</button>
+              <button type="submit" class="submit-user-details-button" onclick="signUp();">Signup</button>
             </div>
           </div>
         </div>
