usertype shows on userpage

--- a/public/user.html
+++ b/public/user.html
@@ -39,6 +39,9 @@
         <div id = "firstname1">
             <h2 id="sysadmin-title" class="text-center">Welcome back, {{ firstname }}</h2>
         </div>
+        <div>
+            <p id="usertype" class="text-center">Usertype: {{ usertype }}</p>
+        </div>
         <div id="sysadmin-info-outer">
             <div id="sysadmin-info" class="container">
                 <p>Welcome to the User Dashboard. Here you can:</p>
