tables are not changable now

--- a/public/user.html
+++ b/public/user.html
@@ -73,13 +73,13 @@
                     </tr>
                     <tr>
                         <!-- contenteditable is temporary, will move to a more permanent solution later-->
-                            <td contenteditable="true"><div id = "username">{{ username }}</div></td>
-                            <td contenteditable="true"><div id = "firstname2">{{ firstname }}</div></td>
-                            <td contenteditable="true"><div id = "lastname">{{ lastname }}</div></td>
+                            <td contenteditable="false"><div id = "username">{{ username }}</div></td>
+                            <td contenteditable="false"><div id = "firstname2">{{ firstname }}</div></td>
+                            <td contenteditable="false"><div id = "lastname">{{ lastname }}</div></td>
                             <!--<td contenteditable="true">9/9/1999</td>-->
-                            <td contenteditable="true"><div id = "email">{{ email }}</div></td>
+                            <td contenteditable="false"><div id = "email">{{ email }}</div></td>
                             <!-- Can use JS/VUE to import clubs for each user-->
-                            <td contenteditable="true"><div id = "password">***</div></td>
+                            <td contenteditable="false"><div id = "password">***</div></td>
                             <!--<td>Club1, Club2, Club3, Club4</td>-->
                   </tr>
                   </table>
