--- a/public/club1.html
+++ b/public/club1.html
@@ -277,6 +277,7 @@
 
                 <div>
                     <button type="button" class="btn btn-primary btn-block mb-4" @click="removeClubMembers">Remove Member from Club</button>
+                    <button type="button" class="btn btn-primary btn-block mb-4" @click="promoteToManager">Promote Member to Manager</button>
                 </div>
             </form>
         </div>
