last push maybe?

--- a/public/user.html
+++ b/public/user.html
@@ -141,14 +141,15 @@
 
 
         <!-- Manage Clubs-->
-        <div id="manage-clubs" class="container">
+
+        <!-- <div id="manage-clubs" class="container">
             <div id="manage-clubs-title" class="container">
                 <h2><strong>Manage Clubs</strong></h2>
                 <small>View all of your joined Clubs here</small>
-            </div>
+            </div> -->
             <!-- Search for Clubs on Website (directly taken from club.html) -->
             <!-- Using vue.js to implement a search query -->
-            <div id="club-search" class="container">
+            <!-- <div id="club-search" class="container">
                 <div id="search-section">
                     <input type="text" class="form-control" placeholder="Search..." v-model="search"/>
                 </div>
@@ -165,7 +166,7 @@
                 <button type="button" onclick="window.location.href = 'club.html';">CLUBS</button>
                 <br>
             </div>
-        </div>
+        </div> -->
 
         <div id="siteUsers" class="container divManageUsers">
             <h5 class="formHeading">
