--- a/public/club7.html
+++ b/public/club7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-AU">
     <head>
-        <title>Archery Club</title>
+        <title>Language Club</title>
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
@@ -16,7 +16,7 @@
         <script src="/javascripts/manageEventUpdate.js" defer></script>
     </head>
     <body onload="getUpdates(); getEvents(); getClubMembers(); checkIfLoggedIn(); checkIfManager(); loadClubPageInfo()">
-        <input type="hidden" id="club-id" value="2">
+        <input type="hidden" id="club-id" value="7">
         <!-- Header -->
         <div id="outer-header">
             <nav id="nav" class="navbar navbar-expand-sm container">
